@@ -118,7 +118,7 @@ class scarySudoku(sudoku):
 
 	def setRegion(self,inlist):
 		# Allow setting of irregular regions
-		inlist = self._sudoku__procCellList(inlist)
+		inlist = self._procCellList(inlist)
 		self.regions.append(inlist)
 		self.model.AddAllDifferent([self.cellValues[x[0]][x[1]] for x in self.regions[-1]])
 		self.model.Add(sum(self.scaryInt[x[0]][x[1]] for x in inlist) == 1)	# Ensure one scary cell per region
